<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    // item으로 하단 5가지 메뉴를 구성
    // 홈, 프렌차이즈, 음료, 찜한 목록, 마이페이지
    // Vector Asset을 사용하여 아이콘을 설정하고 drawable폴더에 저장
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_white"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_star"
        android:icon="@drawable/ic_star_white"
        android:title="@string/title_star" />

    <item
        android:id="@+id/navigation_drink"
        android:icon="@drawable/ic_drink_white"
        android:title="@string/title_drink" />
    <item
        android:id="@+id/navigation_heart"
        android:icon="@drawable/ic_heart_white"
        android:title="@string/title_heart" />

    <item
        android:id="@+id/navigation_person"
        android:icon="@drawable/ic_person_white"
        android:title="@string/title_person" />




</menu>